--- a/inex.html
+++ b/inex.html
@@ -67,8 +67,9 @@
         </div>
       </div>
     </div>
-    <a href="" class = "produced">, by Olha Volina</a>
-  </head>
+    <div class="created"><a href="https://github.com/VolinaOlga/my_project" > Open-source code, </a> by Olha Volina
+    </div>
+    </head>
 
   <body>
     <script src="index.js"></script>
